--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "web-dev",
+  "name": "Service Learning",
   "version": "1.0.0",
-  "description": "Web Dev at Northeastern University",
-  "main": "server.js",
-  "dependencies": {
-    "body-parser": "^1.15.1",
-    "express": "^4.13.4",
-    "mongoose": "^4.4.15"
-  },
-  "devDependencies": {},
+  "description": "Service Learning at Northeastern University",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Jose G. Annunziato",
-  "license": "ISC"
+  "engines": {
+    "node": ">= 0.6.0",
+    "npm": ">= 1.0.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^3.4.8",
+    "mongoose": "^4.12.1"
+  },
+  "devDependencies": {},
+  "bundleDependencies": [],
+  "private": true,
+  "main": "server.js"
 }
