--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.12.1"
+    "mongoose": "^4.12.1",
+    "passport": "^0.4.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
