--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.12.1"
+    "mongoose": "^4.12.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "q": "^1.5.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
