--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.12.6",
+    "nodemailer": "^4.3.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
