--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "file-system": "^2.2.2",
     "mongoose": "^4.12.6",
     "nodemailer": "^4.3.1",
     "passport": "^0.4.0",
