--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "angular-ui-sortable": "^0.17.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "file-system": "^2.2.2",
     "mongoose": "^4.12.6",
     "nodemailer": "^4.3.1",
